--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  color: aliceblue;
 }
 
 .container {
@@ -39,9 +40,14 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
+  color: white;
   text-decoration: none;
   font-size: 1.25rem;
+  padding: 1rem;
+}
+
+.main-nav ul li a:hover {
+  background-color: #666666;
 }
 
 form input,
@@ -50,6 +56,8 @@ form textarea {
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+  background-color: white;
+  color: black;
 }
 
 form textarea {
@@ -60,12 +68,30 @@ form textarea {
 }
 
 form button {
-  background: none;
+  background: black;
+  color: white;
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
 }
 
+form button:hover{
+  background: grey;
+}
+
 .site-footer {
   padding: 2rem 0;
+  color: aliceblue;
+  background-color: grey;
+}
+
+.skip-link {
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+}
+
+.skip-link:hover {
+  background-color: #555;
 }
